# ChangeLog for dev-perl/NetPacket
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/NetPacket/ChangeLog,v 1.32 2010/10/18 08:17:49 tove Exp $

*NetPacket-1.0.0 (18 Oct 2010)

  18 Oct 2010; Torsten Veller <tove@gentoo.org> +NetPacket-1.0.0.ebuild:
  Version bump. Drop NetPacket::ICMPv6, NetPacket::IPv6 and NetPacket::PFLog
  because of license clashes

*NetPacket-0.43.2 (14 Oct 2010)

  14 Oct 2010; Torsten Veller <tove@gentoo.org> +NetPacket-0.43.2.ebuild:
  Version bump

  15 Aug 2010; Torsten Veller <tove@gentoo.org> -NetPacket-0.41.1.ebuild,
  -NetPacket-0.42.0.ebuild:
  Cleanup

  27 Jun 2010; <nixnut@gentoo.org> NetPacket-0.43.0.ebuild:
  ppc stable #323529

  21 Jun 2010; Raúl Porcel <armin76@gentoo.org> NetPacket-0.43.0.ebuild:
  ia64/sparc stable wrt #323529

  15 Jun 2010; Torsten Veller <tove@gentoo.org> NetPacket-0.43.0.ebuild:
  Stable on amd64 and x86 (#323529)

*NetPacket-0.43.1 (12 Jun 2010)

  12 Jun 2010; Torsten Veller <tove@gentoo.org> +NetPacket-0.43.1.ebuild:
  Version bump

*NetPacket-0.43.0 (24 May 2010)

  24 May 2010; Torsten Veller <tove@gentoo.org> +NetPacket-0.43.0.ebuild:
  Version bump

  28 Mar 2010; Torsten Veller <tove@gentoo.org> NetPacket-0.42.0.ebuild:
  LICENSE change in version 0.42.0

*NetPacket-0.42.0 (28 Mar 2010)

  28 Mar 2010; Robin H. Johnson <robbat2@gentoo.org>
  +NetPacket-0.42.0.ebuild:
  Version bump via perl-bump experimental tool.

  02 May 2009; Torsten Veller <tove@gentoo.org> -NetPacket-0.03.ebuild,
  -NetPacket-0.04.ebuild:
  Cleanup

  18 Mar 2009; Joseph Jezak <josejx@gentoo.org> NetPacket-0.41.1.ebuild:
  Marked ppc stable for bug #261521.

  17 Mar 2009; Tiago Cunha <tcunha@gentoo.org> NetPacket-0.41.1.ebuild:
  stable sparc, bug 261521

  14 Mar 2009; Raúl Porcel <armin76@gentoo.org> NetPacket-0.41.1.ebuild:
  ia64 stable wrt #261521

  08 Mar 2009; Markus Meier <maekke@gentoo.org> NetPacket-0.41.1.ebuild:
  amd64/x86 stable, bug #261521
