@@ -1,0 +1,21 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Deep/Test-Deep-0.108.ebuild,v 1.1 2010/10/20 16:21:31 tove Exp $
+
+EAPI=3
+
+MODULE_AUTHOR=RJBS
+inherit perl-module
+
+DESCRIPTION="Test::Deep - Extremely flexible deep comparison"
+
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
+IUSE="test"
+
+DEPEND="
+	test? ( dev-perl/Test-NoWarnings
+		dev-perl/Test-Tester )"
+RDEPEND=""
+
+SRC_TEST="do"
