@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Test-Deep
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Deep/ChangeLog,v 1.40 2010/10/05 16:27:04 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Deep/ChangeLog,v 1.41 2010/10/20 16:21:31 tove Exp $
+
+*Test-Deep-0.108 (20 Oct 2010)
+
+  20 Oct 2010; Torsten Veller <tove@gentoo.org> +Test-Deep-0.108.ebuild:
+  Version bump
 
 *Test-Deep-0.107 (05 Oct 2010)
 
