@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Text-CSV
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-CSV/ChangeLog,v 1.31 2010/10/14 19:33:50 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-CSV/ChangeLog,v 1.32 2010/10/20 16:18:57 tove Exp $
+
+*Text-CSV-1.20 (20 Oct 2010)
+
+  20 Oct 2010; Torsten Veller <tove@gentoo.org> +Text-CSV-1.20.ebuild:
+  Version bump
 
   14 Oct 2010; Brent Baude <ranger@gentoo.org> Text-CSV-1.19.ebuild:
   Marking Text-CSV-1.19 ~ppc for bug 340891
