@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/NetPacket
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/NetPacket/ChangeLog,v 1.32 2010/10/18 08:17:49 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/NetPacket/ChangeLog,v 1.33 2010/10/20 16:24:33 tove Exp $
+
+*NetPacket-1.0.1 (20 Oct 2010)
+
+  20 Oct 2010; Torsten Veller <tove@gentoo.org> +NetPacket-1.0.1.ebuild:
+  Version bump
 
 *NetPacket-1.0.0 (18 Oct 2010)
 
